--- a/source/info.html
+++ b/source/info.html
@@ -58,63 +58,50 @@
         </div>
 
     </nav>
-    <img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image">
-    <!-- <div class="jumbotron-fluid"> -->
+    <!-- <img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image"> -->
+    <!-- <div class="jumbotron-fluid">
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
             <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
             <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für F_inte!</p>
 <a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
         </div>
-    </div>
-    <div class="container">
+    </div> -->
+    <div class="container mb-2">
         <div class="row pt-5" id="head">
             <div class="col-md-8 col-xl-9">
                 <header class="header">
-                    <h1 class="display-4 d-none d-md-block">Was ist denn die F_inte?</h1>
-                    <h4 class="d-md-none">Was ist denn die F_inte?</h4>
+                    <h1 class="display-4 d-none d-md-block">Was ist denn die Flinte?</h1>
+                    <h4 class="d-md-none">Was ist denn die Flinte?</h4>
                 </header>
             </div>
         </div>
         <div class="row border-info" id="body">
             <div class="col-md-8 col-xl-9" role="main">
-                <p class="lead">Wir sind das/die/der ???NEUER NAME???</p>
-                <p>Das f*c (von manchen frauen*café genannt) ist ein selbstorganisierter Raum von und für trans*inter*lesben*frauen*
-                    (f*l*i*t*). Der Raum wird von einem Kollektiv organisiert. Die Bardienste werden meist von Leuten aus
-                    dem Kollektiv gemacht. Jeden Donnerstag und Freitag ab 18.00 Uhr ist das f*c geöffnet. Darüber hinaus
-                    wird der Raum von verschiedenen queer-/feministischen Gruppen genutzt. Das Kollektiv trifft sich zweimal
-                    im Monat am Plenum, um Organisatorisches und Inhaltliches zu besprechen. Jeden 1. Donnerstag im Monat
-                    um 18.00 Uhr findet das Orga-Plenum statt. Alle f*l*i*t*-personen, die im f*c mitmachen wollen, sind
-                    herzlich dazu eingeladen. Ihr könnt das f*c auch außerhalb der Baröffnungszeiten als Gruppe oder Einzelpersonen
-                    nutzen. Wenn ihr also Lust habt, euch in irgendeiner Form im f*c einzubringen, kommt einfach vorbei.
-                    Ihr könnt auch gerne vorher das Kollektiv kontaktieren (per Mail frauencafe[at]gmx.at oder an der Bar).
-                    Im f*c gibt es keinen Konsumzwang. Wer hierher kommt, muss nichts von der Bar konsumieren und kann gerne
-                    auch Mitgebrachtes trinken und essen. Für Getränke geben die Barmenschen Spendenvorschläge. Alle entscheiden
-                    selbst, ob und wieviel sie für Getränke von der Bar spenden wollen. Leider ist das f*c für Rolli_benutzer_innen
-                    nicht barrierefrei. Für die hohe Türschwelle gibt es eine Schräge, die bei Bedarf hinausgetragen wird.
-                    Neben der Eingangstür findet ihr eine Glocke. Das Klo ist leider nicht mit einem Rollstuhl zugänglich.
-                    Im nahen 25hours Hotel in der Lerchenfelderstraße, gibt es aber ein barrierefreies Klo das benutzt werden
-                    kann.
-                </p>
-                <p class="lead text-center"> wir miteinander tun wollen]</p>
-                <p>
-                    STILL NOT ♥ING RASSISMUS TRANSPHOBIE ANTISEMITISMUS ANTIROMAISMUS SEXISMUS MISOGYNIE HOMOPHOBIE ABLEISMUS KULTURALISMUS BIPHOBIE
-                    Alle, die hier sind, gestalten den Raum mit. Respektvolles Verhalten ist eine wichtige Basis für den
-                    Raum. Respektvolles Verhalten kann unterschiedlich aussehen, je nachdem was Leute erlebt haben und leben.
-                    Glaub nicht, dass du eine Person kennst, aufgrund dessen, wie sie redet, aussieht oder du sie wahrnimmst.
-                    Manchmal ist es besser, erst mal zuzuhören und_oder die Person selbst zu fragen. Die Leute vom Kollektiv
-                    sind öfters da und prägen den Raum deshalb mehr. Sie und „die hinter der Bar“ sind Ansprechpersonen.
-                    Wenn sich jemand dir gegenüber grenzüberschreitend, verletzend oder unangenehm verhält, kannst du dir
-                    Unterstützung vom Kollektiv oder den Barmenschen holen. Greif ein oder sag bescheid, wenn du mitbekommst,
-                    dass sich wer ungut verhält! Niemand ist unfehlbar. Alle greifen mal daneben. Umso mehr kommt es manchmal
-                    auf den „Tonfall“ und Umgangsstil an, mit dem du Leuten begegnest, ob ein Irrtum zur Verletzung wird.
-                    Auch Aussagen, die aus Unwissenheit oder Unsicherheit entstehen, können als Gewalt erlebt werden. Wenn
-                    sich Personen grenzüberschreitend verhalten, können diese rausgeschmissen werden. WENN ALLE SPAß HABEN,
-                    HABEN ALLE SPAß!
-                </p>
+                <p class="lead">Die Flinte ist ein queer-feministischer Verein, ein kollektiv organisierter Raum für Projekte & Veranstaltungen.</p>
+                <p>1977 wurde der Verein unter dem Namen Frauencafe gegründet. Er wurde zu einem zentralen Ort der Frauenbewegungen
+                    und feministischen Auseinandersetzungen in Wien. Seit damals befindet sich das Vereinslokal in der Lange
+                    Gasse 11 und schon viele Generationen an Feminist_innen gingen durch diese Türen ein und aus.</p>
+                <p>2018 wurde der Verein schließlich in Flinte umbenannt. Der neue Name soll gleichzeitig auf die Einaldungspolitk
+                    des Raumes hinweisen, als auch… Frauen, Trans-, Inter und Non- Binary Personen jeglicher Ausuferungen
+                    sind in der Flinte herzlich willkommen.</p>
+                <p>Die Flinte hat es sich zur Aufgabe gemacht gesellschaftliche Verhältnisse zu kritisieren und eine Raum zu
+                    schaffen in dem Frauen, Trans-, Inter und Non- Binary Personen ohne Benachteiligungen, Grenzüberschreitungen,
+                    Gewalt und Vorurteilen, denen sie im Alltag ausgesetzt sind, sein können. Es ist eine bewusste politische
+                    Entscheidung dyacis Männer nicht einzuladen und bitten daher alle die sich als solche verstehen unaufgefordert
+                    den Raum zu verlassen.</p>
+                <p>Wir versuchen in diesem Raum etwas anders zu machen und nicht gesellschaftliche Verhältnisse zu spiegeln.
+                    Dennoch ist uns klar, dass auch in der Flinte Diskriminierungen passieren können. Wir wollen bestmöglich
+                    Normen von gender_Geschlecht und Sexualität überdenken und Unterdrückungsformen wie (Hetero-)Sexismus,
+                    Homo-, Trans- und Bifeindlichkeit etc. benennen und kritisieren.</p>
+                <p>Alle Menschen haben nicht nur eine gesellschaftliche Position. Wir haben zu unterschiedlichen Zeitpunkten
+                    und Orten unterschiedliche (Macht-)positionen. Ich kann etwa wegen meines genders_Geschlechts Gewalt
+                    erfahren und gleichzeitig von rassistischen Strukturen profitieren und/oder rassistisch handeln. Deshalb
+                    ist es notwendig rassistische Gewalt (auch) in der flinte aufzuzeigen und aktiv dagegen aufzutreten und
+                    zu handeln. Das gilt auch für andere Diskriminierungsformen. kann.</p>
             </div>
             <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
-                <a class="text-right">
+                <a id="QuickFacts" class="text-right">
                     <p class="lead">FLinté Wien </p>
                     <address>Lange Gasse 11 1080 Wien</address>
                     <p>
@@ -138,6 +125,7 @@
             </div>
         </div>
     </div>
+
 
     </div>
     <footer class="footer">
