--- a/source/kontakt.html
+++ b/source/kontakt.html
@@ -80,6 +80,44 @@
         <div class="row border-info" id="body">
             <div class="col-md-8 col-xl-9" role="main">
                 <h4 class="text-dark">Du willst mit uns reden? Mitmachen?</h4>
+
+                <form id="contact-form" method="POST" action="contact.php" role="form" class="needs-validation" novalidate>
+                    <div class="form-group">
+                        <small id="emailInfo" class="form-text text-muted">Wir geben deine Email an keinen weiter</small>
+                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailInfo" placeholder="Gib hier deine Email Adresse an"
+                            required>
+
+                        <small id="nameInfo" class="form-text text-muted">So sprechen wir dich in der Korrespondenz an</small>
+                        <input type="text" class="form-control" id="InputName" aria-describedby="nameInfo" placeholder="Wie heißt du?">
+
+                        <small id="MessageInfo" class="form-text text-muted">Schon kannst du fröhlich tippen</small>
+                        <textarea type="text" class="form-control mb-1" id="InputMessage" rows="12" placeholder="Was gibt's?" required></textarea>
+
+                        <button class="btn btn-success" type="submit">Schick die Eule weg</button>
+                    </div>
+                </form>
+                <script>
+                    // Example starter JavaScript for disabling form submissions if there are invalid fields
+                    (function () {
+                        'use strict';
+                        window.addEventListener('load', function () {
+                            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                            var forms = document.getElementsByClassName('needs-validation');
+                            // Loop over them and prevent submission
+                            var validation = Array.prototype.filter.call(forms, function (form) {
+                                form.addEventListener('submit', function (event) {
+                                    if (form.checkValidity() === false) {
+                                        event.preventDefault();
+                                        event.stopPropagation();
+                                    }
+                                    form.classList.add('was-validated');
+                                }, false);
+                            });
+                        }, false);
+                    })();
+                </script>
+
+
             </div>
             <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
                 <a class="text-right">
