small on front page

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3">
-                <a id="QuickFacts" class="text-right">
+                <a id="QuickFacts" class="text-right small">
                     <p class="lead">FLinté Wien </p>
                     <address>Lange Gasse 11 1080 Wien</address>
                     <p>
