small quickfacts and break in qf

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3 col-xl-3">
-                <a id="QuickFacts" class="text-right small">
+            <div class="col-md-4 col-lg-3 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
+                <a id="QuickFacts" class="text-right">
                     <p class="lead">FLinté Wien </p>
-                    <address>Lange Gasse 11 1080 Wien</address>
+                    <address>Lange Gasse 11<br>1080 Wien</address>
                     <p>
                         <strong>Öffnungszeiten</strong>
                     </p>
