--- a/links.html
+++ b/links.html
@@ -62,33 +62,33 @@
     <!-- <div class="jumbotron-fluid"> -->
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
-            <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
-            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für F_inte!</p>
-<a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
+            <h1 class="display-4 font-italic">Wir haben uns umbennant!</h1>
+            <p class="lead my-3">Der jetztige Name existierte seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für Flinte!</p>
+            <a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
         </div>
     </div>
     <div class="container">
         <div class="row pt-5" id="head">
             <div class="col-lg-8 col-xl-9">
                 <header class="header">
-                    <h1 class="display-4 d-none d-md-block">Template large</h1>
-                    <h4 class="d-md-none">Template different</h4>
+                    <h1 class="display-4 d-none d-md-block">Nutzvolles</h1>
+                    <h4 class="d-md-none">Nutzvolles</h4>
                 </header>
             </div>
         </div>
         <div class="row border-info" id="body">
             <div class="col-md-8 col-xl-9" role="main">
-                <heading class="text-">main content side</span>
+                <heading class="text-">Hier ein paar </span>
             </div>
-            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small            text-right" role="side">
-                <a class="text-right">
+            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small" role="side">
+                <a id="QuickFacts" class="text-right">
                     <p class="lead">FLinté Wien </p>
-                    <address>Lange Gasse 11 1080 Wien</address>
+                    <address>Lange Gasse 11<br>1080 Wien</address>
                     <p>
                         <strong>Öffnungszeiten</strong>
                     </p>
                     <p>Do & Fr: 19-24 Uhr</p>
-                    <p>Frauen*, Lesben*, Trans* und Intersex* Personen welcome!
+                    <p>Frauen, Inter-, Trans- und Non-Binary Personen willkommen.
                         <br>
                         <br>
                         <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
