--- a/info.html
+++ b/info.html
@@ -100,15 +100,15 @@
                     ist es notwendig rassistische Gewalt (auch) in der flinte aufzuzeigen und aktiv dagegen aufzutreten und
                     zu handeln. Das gilt auch für andere Diskriminierungsformen. kann.</p>
             </div>
-            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
+            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small" role="side">
                 <a id="QuickFacts" class="text-right">
-                    <p class="lead">FLinté Wien </p>
-                    <address>Lange Gasse 11 1080 Wien</address>
+                    <p class="lead">FLinté Wien</p>
+                    <address>Lange Gasse 11<br>1080 Wien</address>
                     <p>
                         <strong>Öffnungszeiten</strong>
                     </p>
                     <p>Do & Fr: 19-24 Uhr</p>
-                    <p>Frauen*, Lesben*, Trans* und Intersex* Personen welcome!
+                    <p>Frauen, Inter-, Trans- und Non-Binary Personen willkommen.
                         <br>
                         <br>
                         <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
