small quickfacts and break in qf

--- a/links.html
+++ b/links.html
@@ -82,8 +82,9 @@
             </div>
             <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small" role="side">
                 <a id="QuickFacts" class="text-right">
-                    <p class="lead">FLinté Wien </p>
-                    <address>Lange Gasse 11<br>1080 Wien</address>
+                    <p class="lead">Flinte Wien</p>
+                    <address>Lange Gasse 11
+                        <br>1080 Wien</address>
                     <p>
                         <strong>Öffnungszeiten</strong>
                     </p>
@@ -91,16 +92,14 @@
                     <p>Frauen, Inter-, Trans- und Non-Binary Personen willkommen.
                         <br>
                         <br>
-                        <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
+                        <i class="material-icons small" alt="Rauchfrei">smoke_free</i>1. und 3. Fr, 2. und 4. Do des Monats
                         <br>
-                        <i class="material-icons small" alt="Rauchen">smoking_rooms</i> 2. und 4. Fr, 1. und 3. Do des Monats
+                        <i class="material-icons small" alt="Rauchen">smoking_rooms</i>2. und 4. Fr, 1. und 3. Do des Monats
                         <br>
                     </p>
                     <p>
                         <i class="material-icons md-18">accessible</i>Barrierearmer Zugang ist über eine Schräge möglich.
-                        <br>Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt werden kann.)
-                        <br>
-                    </p>
+                        <br>Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt werden kann.)</p>
                 </a>
             </div>
         </div>
