small quickfacts and break in qf

--- a/kontakt.html
+++ b/kontakt.html
@@ -122,8 +122,7 @@
             <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
 <a id="QuickFacts" class="text-right">
     <p class="lead">Flinte Wien</p>
-    <address>Lange Gasse 11
-        <br>1080 Wien</address>
+    <address>Lange Gasse 11<br>1080 Wien</address>
     <p>
         <strong>Öffnungszeiten</strong>
     </p>
