--- a/links.html
+++ b/links.html
@@ -62,7 +62,7 @@
     <!-- <div class="jumbotron-fluid"> -->
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
-            <h1 class="display-4 font-italic">Wir haben uns umbennant!</h1>
+            <h1 class="display-4 font-italic">Wir haben uns umbenannt!</h1>
             <p class="lead my-3">Der jetztige Name existierte seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für Flinte!</p>
             <a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
         </div>
