--- a/links.html
+++ b/links.html
@@ -56,9 +56,37 @@
                 </ul>
             </div>
         </div>
-
     </nav>
+    <!-- Image Carousel -->
+    <div id="ImageCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block" src="/Flinte-verein.github.io/img/pic1.jpg" alt="First image">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="/Flinte-verein.github.io/img/pic2.jpg" alt="Second image">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="/Flinte-verein.github.io/img/pic3.jpg" alt="Third image">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="/Flinte-verein.github.io/img/pic4.jpg" alt="Fourth image">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
     <img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image">
+
+
+
     <!-- <div class="jumbotron-fluid"> -->
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
