added image carousel

--- a/links.html
+++ b/links.html
@@ -58,6 +58,17 @@
         </div>
     </nav>
     <!-- Image Carousel -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.carousel').each(function () {
+                $(this).carousel({
+                    pause: true,
+                    interval: false
+                });
+            });
+        });​
+    </script>
+    
     <div id="ImageCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
