--- a/links.html
+++ b/links.html
@@ -60,15 +60,12 @@
     <!-- Image Carousel -->
     <script type="text/javascript">
         $(document).ready(function () {
-            $('.carousel').each(function () {
-                $(this).carousel({
-                    pause: true,
-                    interval: false
-                });
-            });
-        });​
+            $('.carousel').carousel({
+                interval: 2000
+            })
+        })
     </script>
-    
+
     <div id="ImageCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
